Add missing config and complete README

--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,10 +1,89 @@
 {
     "dev": {
-        "aws_region": "us-west-2",
         "django_settings": "insurance_api.settings",
         "profile_name": "default",
         "project_name": "insurance-api",
         "runtime": "python3.6",
-        "s3_bucket": "insurance-api-bucket"
+        "s3_bucket": "britecore-insurance",
+        "vpc_config" : {
+            "SubnetIds": [
+                "subnet-a4b990cc",
+                "subnet-6bdfb811",
+                "subnet-9204cade"
+            ],
+            "SecurityGroupIds": [ "sg-0d82f789eff7b77db" ]
+        }
+    },
+    "dev_ap_northeast_1": {
+        "aws_region": "ap-northeast-1",
+        "extends": "dev"
+    },
+    "dev_ap_northeast_2": {
+        "aws_region": "ap-northeast-2",
+        "extends": "dev"
+    },
+    "dev_ap_northeast_3": {
+        "aws_region": "ap-northeast-3",
+        "extends": "dev"
+    },
+    "dev_ap_south_1": {
+        "aws_region": "ap-south-1",
+        "extends": "dev"
+    },
+    "dev_ap_southeast_1": {
+        "aws_region": "ap-southeast-1",
+        "extends": "dev"
+    },
+    "dev_ap_southeast_2": {
+        "aws_region": "ap-southeast-2",
+        "extends": "dev"
+    },
+    "dev_ca_central_1": {
+        "aws_region": "ca-central-1",
+        "extends": "dev"
+    },
+    "dev_cn_north_1": {
+        "aws_region": "cn-north-1",
+        "extends": "dev"
+    },
+    "dev_cn_northwest_1": {
+        "aws_region": "cn-northwest-1",
+        "extends": "dev"
+    },
+    "dev_eu_central_1": {
+        "aws_region": "eu-central-1",
+        "extends": "dev"
+    },
+    "dev_eu_west_1": {
+        "aws_region": "eu-west-1",
+        "extends": "dev"
+    },
+    "dev_eu_west_2": {
+        "aws_region": "eu-west-2",
+        "extends": "dev"
+    },
+    "dev_eu_west_3": {
+        "aws_region": "eu-west-3",
+        "extends": "dev"
+    },
+    "dev_sa_east_1": {
+        "aws_region": "sa-east-1",
+        "extends": "dev"
+    },
+    "dev_us_east_1": {
+        "aws_region": "us-east-1",
+        "extends": "dev"
+    },
+    "dev_us_east_2": {
+        "aws_region": "us-east-2",
+        "extends": "dev"
+    },
+    "dev_us_west_1": {
+        "aws_region": "us-west-1",
+        "extends": "dev"
+    },
+    "dev_us_west_2": {
+        "aws_region": "us-west-2",
+        "extends": "dev"
     }
 }
